infrastructure/supporting-infra/keycloak-middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: keycloak-headers
  namespace: keycloak
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "client_ip" # Client IP forwarding
      X-Forwarded-Proto: "https" # Forward the HTTPS protocol
      X-Forwarded-Port: "443" # Forward the port as 443 for HTTPS
    customResponseHeaders:
      Strict-Transport-Security: "max-age=31536000; includeSubDomains" # HSTS for security
