infrastructure/supporting-infra/keycloak.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    toolkit.fluxcd.io/tenant: kog-team
