infrastructure/supporting-infra/keycloak-admin-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-admin
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.local.reinthal.cc`) && PathPrefix(`/auth`)
      kind: Rule
      middlewares:
        - name: keycloak-headers
      services:
        - name: keycloak
          port:
            80
            #- match: Host(`keycloak.local.reinthal.cc`) && Path(`/`)
            #  kind: Rule
            #redirect:
            # permanent: true
            #to: "/auth" # Redirect the root path to /auth
  tls:
    secretName: local-reinthal-cc-tls # Your TLS secret for Keycloak
