infrastructure/supporting-infra/minio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  labels:
    toolkit.fluxcd.io/tenant: kog-team
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: minio
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: body-size-headers
  namespace: minio
spec:
  buffering:
    maxRequestBodyBytes: 50000000 # 50mb
    maxResponseBodyBytes: 50000000
    memRequestBodyBytes: 50000000
    memResponseBodyBytes: 50000000
    retryExpression: IsNetworkError() && Attempts() <= 2
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: websockets-enabled
  namespace: minio
spec:
  headers:
    customRequestHeaders:
      Connection: keep-alive, Upgrade
      Upgrade: WebSocket
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-operator-ingress
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio-operator.platform.datadrivet.dev`)
      kind: Rule
      middlewares:
        - name: body-size-headers
          namespace: minio
        - name: websockets-enabled
          namespace: minio
      services:
        - name: console
          port: 9090
  tls:
    secretName: platform-datadrivet-dev-tls
